[package]
name = "nipaw_github"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true

nipaw_core = { path = "../nipaw_core" }
