[package]
name = "nipaw_github"
version = "0.2.0"
description = "Github provider for nipaw"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
http.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

scraper = "0.24.0"

nipaw_core = { path = "../nipaw_core" }

