[package]
name = "nipaw_node"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true



[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["chrono_date", "async"] }
napi-derive = "3.0.0"
serde.workspace = true
chrono.workspace = true

nipaw_core = { path = "../nipaw_core" }
nipaw_github = { path = "../nipaw_github" }
nipaw_gitee = { path = "../nipaw_gitee" }
nipaw_gitcode = { path = "../nipaw_gitcode" }
nipaw_cnb = { path = "../nipaw_cnb" }


[build-dependencies]
napi-build = "2"

